fix blurriness

--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,8 @@ html, body {
 
 canvas {
     image-rendering: pixelated;
+    image-rendering: crisp-edges;
+    image-rendering: -moz-crisp-edges;
 }
 
 #display {
